added style for question-answer section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="card-image">
             <div class="body-image">
             </div>
-            <img src="images/illustration-box-desktop.svg" alt="illustration box">
+            <img src="images/illustration-box-desktop.svg" alt="illustration box" class="box-image">
         </div>
         <div class="card-body">
             <h1 class="title">FAQ</h1>
