--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>FAQ accordion</title>
 </head>
 <body>
-    <main class="card">
+    <main>
         <div class="card-image">
             <div class="body-image">
             </div>
