added style for active questions

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="card-body">
             <h1 class="title">FAQ</h1>
             <div class="questions">
-                <div class="question-answer">
+                <div class="questionanswer">
                     <div class="question">
                         <h3 class="question-title">How many team members can I invite?</h3>
                         <img src="images/icon-arrow-down.svg" alt="arrow">
@@ -27,7 +27,7 @@
                         <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan. </p>
                     </div>
                 </div>
-                <div class="question-answer">
+                <div class="questionanswer">
                     <div class="question">
                         <h3 class="question-title">What is the maximum file upload size?</h3>
                         <img src="images/icon-arrow-down.svg" alt="arrow">
@@ -36,7 +36,7 @@
                         <p>No more than 2GB. All files in your account must fit your allotted storage space. </p>
                     </div>
                 </div>
-                <div class="question-answer">
+                <div class="questionanswer">
                     <div class="question">
                         <h3 class="question-title">How do I reset my password?</h3>
                         <img src="images/icon-arrow-down.svg" alt="arrow">
@@ -45,7 +45,7 @@
                         <p>Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
                     </div>
                 </div>
-                <div class="question-answer">
+                <div class="questionanswer">
                     <div class="question">
                         <h3 class="question-title">Can I cancel my subscription?</h3>
                         <img src="images/icon-arrow-down.svg" alt="arrow">
@@ -54,7 +54,7 @@
                         <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
                     </div>
                 </div>
-                <div class="question-answer">
+                <div class="questionanswer">
                     <div class="question">
                         <h3 class="question-title">Do you provide additional support?</h3>
                         <img src="images/icon-arrow-down.svg" alt="arrow">
