--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <title>FAQ accordion</title>
+    <title>FAQ Accordion Card</title>
 </head>
 <body>
     <main>
@@ -18,46 +18,46 @@
         <div class="card-body">
             <h1 class="title">FAQ</h1>
             <div class="questions">
-                <div class="questionanswer">
+                <div class="question-answer">
                     <div class="question">
                         <h3 class="question-title">How many team members can I invite?</h3>
-                        <img src="images/icon-arrow-down.svg" alt="arrow">
+                        <img src="images/icon-arrow-down.svg" alt="arrow" class="arrow">
                     </div>
                     <div class="answer">
                         <p>You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan. </p>
                     </div>
                 </div>
-                <div class="questionanswer">
+                <div class="question-answer">
                     <div class="question">
                         <h3 class="question-title">What is the maximum file upload size?</h3>
-                        <img src="images/icon-arrow-down.svg" alt="arrow">
+                        <img src="images/icon-arrow-down.svg" alt="arrow" class="arrow">
                     </div>
                     <div class="answer">
                         <p>No more than 2GB. All files in your account must fit your allotted storage space. </p>
                     </div>
                 </div>
-                <div class="questionanswer">
+                <div class="question-answer">
                     <div class="question">
                         <h3 class="question-title">How do I reset my password?</h3>
-                        <img src="images/icon-arrow-down.svg" alt="arrow">
+                        <img src="images/icon-arrow-down.svg" alt="arrow" class="arrow">
                     </div>
                     <div class="answer">
                         <p>Click “Forgot password” from the login page or “Change password” from your profile page. A reset link will be emailed to you.</p>
                     </div>
                 </div>
-                <div class="questionanswer">
+                <div class="question-answer">
                     <div class="question">
                         <h3 class="question-title">Can I cancel my subscription?</h3>
-                        <img src="images/icon-arrow-down.svg" alt="arrow">
+                        <img src="images/icon-arrow-down.svg" alt="arrow" class="arrow">
                     </div>
                     <div class="answer">
                         <p>Yes! Send us a message and we’ll process your request no questions asked.</p>
                     </div>
                 </div>
-                <div class="questionanswer">
+                <div class="question-answer">
                     <div class="question">
                         <h3 class="question-title">Do you provide additional support?</h3>
-                        <img src="images/icon-arrow-down.svg" alt="arrow">
+                        <img src="images/icon-arrow-down.svg" alt="arrow" class="arrow">
                     </div>
                     <div class="answer">
                         <p>Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
